--- a/index.html
+++ b/index.html
@@ -33,21 +33,24 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Stylish Portfolio</h1>
-                <h3 class="mb-5"><em>A Free Bootstrap Theme by Start Bootstrap</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                <h1 class="mb-1">Modelo en V</h1>
+                <h3 class="mb-5"><em>Camilo Loboguerrero Nova</em></h3>
+                <a class="btn btn-primary btn-xl" href="#about">Que es?</a>
             </div>
         </header>
-        <!-- About-->
+        <!-- descripcion-->
         <section class="content-section bg-light" id="about">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                        <h2>Que es el modelo en V ?</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                            <a href="https://unsplash.com/">Unsplash</a>
-                            !
+                            El modelo en V, tambien conocido como modelo en cuatro niveles, es un Modelo
+                            empleado en diferentes procesos de desarrollo, como el desarrolo de software;
+                            el modelo en V tambien define los procedimientos de gestion de calidad que lo acompañan,
+                            describe como puede interactuar estas fases individuales entre si, es llamado modelo en V,
+                            por su estructura que se asemeja a la letra V.
+
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
                     </div>
@@ -113,7 +116,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <p class="mb-0"> yellow pencil with envelopes on a clean, blue backdrop!</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
